--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                                     </div>
                                     <div class="row">
                                         <div class="col-xs-12">
-                                            <p class="ApplicationDescription">Tetris is a 2D game application written in C++ using Microsoft Foundation Class (MFC) Library. Created with Visual Studio 2017.</p>
+                                            <p class="ApplicationDescription">Tetris is a 2D game written in C++ using Microsoft Foundation Class (MFC) Library. Created with Visual Studio 2017.</p>
                                             <p class="ApplicationDescription">Download Tetris by clicking <a href="https://github.com/bogluc/TetrisGame" target="_blank">
                                                 <span class="Link">here</span></a> and try it out. Enjoy!
                                         </div>
@@ -109,7 +109,7 @@
                                     </div>
                                     <div class="row">
                                         <div class="col-xs-12">
-                                            <p class="ApplicationDescription">SameGame is a 2D game application written in C++ using Microsoft Foundation Class (MFC) Library. Created with Visual Studio 2013.</p>
+                                            <p class="ApplicationDescription">SameGame is a 2D game written in C++ using Microsoft Foundation Class (MFC) Library. Created with Visual Studio 2013.</p>
                                             <p class="ApplicationDescription">Download SameGame by clicking <a href="https://github.com/bogluc/SameGame" target="_blank">
                                                 <span class="Link">here</span></a> and try it out. Enjoy!
                                         </div>
