--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <div id="particles-js" class="jumbotron">
         <div class="container text-left margin-t-60">
             <h1 class="promo-block-title">Hi! I'm Robert. <br/>
-                <span class="promo-block-text">Manager, Scrum practitioner <br />&amp; Software Engineer</span>
+                <span class="promo-block-text">Software Engineer</span>
             </h1>      
         </div>
     </div>
