--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
         })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
         ga('create', 'UA-99592644-1', 'auto');
+        ga('create', 'UA-99592644-2', 'auto');
+        ga('create', 'UA-99592644-3', 'auto');
         ga('send', 'pageview');
     </script>
 
