--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
             <div class="row">
                 <div class="col-sm-3">
                     <div class="text-left sm-text-left">
-                        <h2 class="margin-b-0">Contacts</h2>
+                        <h2 class="margin-b-0">Contact</h2>
                     </div>
                 </div>
 
