--- a/index.html
+++ b/index.html
@@ -78,14 +78,9 @@
 <div id="home">
     <div id="particles-js" class="jumbotron">
         <div class="container text-left margin-t-60">
-            <h1 class="promo-block-title">Hi! I'm Robert. <br/>
-                <span class="promo-block-text">Software Engineer</span>
-            </h1>      
-            
-            <!--<div class="promo-block-title">
-                Hi! I'm Robert. <br />
-                <span class="promo-block-text">Manager, Scrum practitioner <br />&amp; Software Engineer</span>
-            </div>-->
+            <div class="promo-block-title">Hi! I'm Robert. <br/>
+                <span class="promo-block-text">Here are some of my latest apps.</span>
+            </div>      
         </div>
     </div>
 </div>
