--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 <!--========== HEADER ==========-->
 <header class="header navbar-fixed-top">
     <!-- Navbar -->
-    <nav class="navbar" role="navigation">
+    <nav class="navbar">
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="menu-container js_nav-item">
@@ -79,7 +79,7 @@
     <div id="particles-js" class="jumbotron">
         <div class="container text-left margin-t-60">
             <div class="promo-block-title">Hi! I'm Robert. <br/>
-                <span class="promo-block-text">Here are some of my latest apps.</span>
+                <div class="promo-block-text">Here are some of my latest apps.</div>
             </div>      
         </div>
     </div>
@@ -170,8 +170,7 @@
 
                 <div class="col-sm-9">
                     <h5>Email</h5>
-                    <a href="mailto:
-                        &#114;&#111;&#098;&#101;&#114;&#116;&#046;&#098;&#114;&#097;&#110;&#101;&#097;&#064;&#111;&#117;&#116;&#108;&#111;&#111;&#107;&#046;&#099;&#111;&#109;">
+                    <a href="mailto:&#114;&#111;&#098;&#101;&#114;&#116;&#046;&#098;&#114;&#097;&#110;&#101;&#097;&#064;&#111;&#117;&#116;&#108;&#111;&#111;&#107;&#046;&#099;&#111;&#109;">
                         &#114;&#111;&#098;&#101;&#114;&#116;&#046;&#098;&#114;&#097;&#110;&#101;&#097;&#064;&#111;&#117;&#116;&#108;&#111;&#111;&#107;&#046;&#099;&#111;&#109;
                     </a>
                 </div>
